完善menu role操作
